# querymind

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
app/: bootstrap.py  streamlit_app.py
config/: access_control.yaml  business_glossary.yaml  example_queries.yaml  schema_metadata.yaml  settings.yaml
evaluation/: comparison.py  eval_results.json  eval_results_maxed.json  eval_results_starved.json  eval_runner.py  test_questions.yaml
notebooks/: 01_data_exploration.ipynb  02_hello_world_llm.ipynb  test_rag_pipeline.ipynb
scripts/: bundle_for_review.py  verify_bundle.py
src/: __init__.py  config.py  pipeline.py
src/database/: __init__.py  connection.py  setup.py
src/llm/: openai_provider.py  prompts.py  provider.py  response_generator.py
src/rag/: _config.py  embedder.py  retriever.py  test_rag_pipeline.py
src/safety/: access_control.py  cost_estimator.py  sql_validator.py
src/visualization/: chart_builder.py  chart_selector.py
tests/: test_chart_selector.py  test_eval_comparison.py  test_observability.py  test_pipeline.py  test_response_generator.py  test_retriever.py  test_safety.py  test_sql_validator.py
